--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,5 +7,7 @@ packages:
 ignoredBuiltDependencies:
   - esbuild
 
+ignoreScripts: true
+
 # For `windows_symlinked_longfilename` in tests/resolve_test.rs
 virtualStoreDirMaxLength: 1024
