--- a/package.json
+++ b/package.json
@@ -1,22 +1,74 @@
 {
-  "name": "@unrs/resolver-binding",
-  "private": true,
-  "version": "0.0.0",
+  "name": "unrs-resolver",
+  "version": "1.7.13",
+  "type": "commonjs",
+  "description": "UnRS Resolver Node API with PNP support",
   "repository": "git+https://github.com/unrs/unrs-resolver.git",
+  "homepage": "https://github.com/unrs/unrs-resolver#readme",
+  "author": "JounQin <admin@1stg.me> (https://www.1stG.me)",
   "funding": "https://opencollective.com/unrs-resolver",
+  "license": "MIT",
+  "packageManager": "pnpm@10.11.1",
+  "main": "index.js",
+  "browser": "browser.js",
+  "files": [
+    "browser.js",
+    "fallback.js",
+    "index.d.ts",
+    "index.js"
+  ],
   "scripts": {
-    "build": "napi build --platform --release --package-json-path npm/package.json --manifest-path napi/Cargo.toml",
-    "build:debug": "napi build --platform --package-json-path npm/package.json --manifest-path napi/Cargo.toml",
-    "prepublishOnly": "napi pre-publish -t npm",
+    "build": "pnpm build:debug --release",
+    "build:debug": "napi build --platform --manifest-path napi/Cargo.toml",
+    "postbuild:debug": "node napi/patch.mjs",
+    "postinstall": "napi-postinstall unrs-resolver 1.7.13 check",
+    "prepublishOnly": "clean-pkg-json",
     "test": "vitest run -r ./napi"
+  },
+  "dependencies": {
+    "napi-postinstall": "^0.2.2"
   },
   "devDependencies": {
     "@napi-rs/cli": "3.0.0-alpha.87",
     "@napi-rs/wasm-runtime": "^0.2.10",
     "@types/node": "^22.15.29",
+    "clean-pkg-json": "^1.3.0",
     "emnapi": "^1.4.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-pkg": "^0.21.1",
     "typescript": "^5.8.3",
     "vitest": "^3.2.1"
   },
-  "packageManager": "pnpm@10.11.1"
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
+  "napi": {
+    "binaryName": "resolver",
+    "packageName": "@unrs/resolver-binding",
+    "wasm": {
+      "browser": {
+        "fs": true
+      }
+    },
+    "targets": [
+      "x86_64-pc-windows-msvc",
+      "aarch64-pc-windows-msvc",
+      "i686-pc-windows-msvc",
+      "x86_64-unknown-linux-gnu",
+      "x86_64-unknown-linux-musl",
+      "x86_64-unknown-freebsd",
+      "aarch64-unknown-linux-gnu",
+      "aarch64-unknown-linux-musl",
+      "armv7-unknown-linux-gnueabihf",
+      "armv7-unknown-linux-musleabihf",
+      "powerpc64le-unknown-linux-gnu",
+      "riscv64gc-unknown-linux-gnu",
+      "riscv64gc-unknown-linux-musl",
+      "s390x-unknown-linux-gnu",
+      "x86_64-apple-darwin",
+      "aarch64-apple-darwin",
+      "wasm32-wasip1-threads"
+    ]
+  }
 }
