--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,8 +77,8 @@ jobs:
 
       - name: Check
         run: |
-          rustup target add wasm32-unknown-unknown
-          cargo check --all-features --target wasm32-unknown-unknown
+          rustup target add wasm32-wasip1
+          cargo check --all-features --target wasm32-wasip1
 
   wasi:
     name: Test wasi target
