--- a/.github/workflows/release-napi.yml
+++ b/.github/workflows/release-napi.yml
@@ -56,6 +56,7 @@ jobs:
           - os: windows-latest
             target: i686-pc-windows-msvc
             architecture: x86
+            cpu: ia32
             build: pnpm build
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
@@ -63,6 +64,9 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
             build: pnpm build -x
+          - os: ubuntu-latest
+            target: aarch64-linux-android
+            build: pnpm build
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             build: pnpm build --use-napi-cross
@@ -72,6 +76,10 @@ jobs:
           - os: ubuntu-latest
             target: armv7-unknown-linux-gnueabihf
             build: pnpm build --use-napi-cross
+          - os: ubuntu-latest
+            target: armv7-linux-androideabi
+            architecture: x86
+            build: pnpm build
           - os: ubuntu-latest
             target: armv7-unknown-linux-musleabihf
             build: pnpm build -x
@@ -110,6 +118,7 @@ jobs:
       - uses: ./.github/actions/pnpm
         with:
           architecture: ${{ matrix.architecture }}
+          cpu: ${{ matrix.cpu }}
 
       - run: rustup target add ${{ matrix.target }}
 
