--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
       "x86_64-unknown-linux-gnu",
       "x86_64-unknown-linux-musl",
       "x86_64-unknown-freebsd",
+      "aarch64-linux-android",
       "aarch64-unknown-linux-gnu",
       "aarch64-unknown-linux-musl",
+      "armv7-linux-androideabi",
       "armv7-unknown-linux-gnueabihf",
       "armv7-unknown-linux-musleabihf",
       "powerpc64le-unknown-linux-gnu",
