--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,10 +82,10 @@ name = "resolver"
 cfg-if = "1.0"
 dashmap = "7.0.0-rc2"
 dunce = "1.0.5" # Normalize Windows paths to the most compatible format, avoiding UNC where possible
-indexmap = { version = "2.9.0", features = ["serde"] }
+indexmap = { version = "2.10.0", features = ["serde"] }
 json-strip-comments = "1.0.4"
 once_cell = "1.21.3" # Use `std::sync::OnceLock::get_or_try_init` when it is stable.
-papaya = "0.2.1"
+papaya = "0.2.3"
 rustc-hash = { version = "2.1.1", default-features = false, features = ["std"] }
 serde = { version = "1.0.219", features = ["derive"], optional = true } # derive for Deserialize from package.json
 serde_json = { version = "1.0.140", features = ["preserve_order"], optional = true } # preserve_order: package_json.exports requires order such as `["require", "import", "default"]`
@@ -93,14 +93,14 @@ simdutf8 = { version = "0.1.5", features = ["aarch64_neon"] }
 thiserror = "2.0.12"
 tracing = "0.1.41"
 url = "2.5.4"
-windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
+windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
 
 pnp = { version = "0.11.0", optional = true }
 
 document-features = { version = "0.2.11", optional = true }
 
 [dev-dependencies]
-criterion2 = { version = "3.0.0", default-features = false }
+criterion2 = { version = "3.0.1", default-features = false }
 dirs = { version = "6.0.0" }
 normalize-path = { version = "0.2.1" }
 pico-args = "0.5.0"
@@ -143,3 +143,9 @@ codegen-units = 1
 strip = "symbols" # set to `false` for debug information
 debug = false # set to `true` for debug information
 panic = "abort" # Let it crash and force ourselves to write safe Rust.
+
+[profile.release.package.regex-automata]
+opt-level = "z" # Optimize for size.
+
+[profile.release.package.regex-syntax]
+opt-level = "z" # Optimize for size.
